project/security_group-m/security_group.tf
 resource "aws_security_group" "sec_ssh_http" {
    name   = "security_group"
    vpc_id = var.vpc_id # Fixed reference from VPC_sog to VPC_project

    ingress {
      from_port   = 22
      to_port     = 22
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
      from_port   = 80
      to_port     = 80
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
      from_port   = 0
      to_port     = 0
      protocol    = "-1"
      cidr_blocks = ["0.0.0.0/0"]
    }

    tags = {
      Name = "SSH_HTTP_Security_Group"
    }
  }
